# VHS-Coffeeman

./: .gitignore  VHS Coffeeman Project Overview.txt
code_new/rp2040/: config.py  gpio_test.py  grbl_interface.py  grbl_test.py  main.py  maintenance.py  pump_controller.py  pump_test.py  recipe.py  serial_comm.py  serial_test.py  state_machine.py  vcr_controller.py  vcr_test.py
vhs_coffeeman/: .gitignore  PROJECT_STATUS.md  README.md  pin_map.md  pyproject.toml
vhs_coffeeman/scripts/: activate_venv.sh  cup_sensor_test.py  gpio_test.py  grbl_enable_test.py  grbl_test.py  pump_diagnostic.py  pump_test.py  register_tape.py  rfid_test.py  video_test.py
vhs_coffeeman/tests/: __init__.py
vhs_coffeeman/vhs_coffeeman/: __init__.py  main.py
vhs_coffeeman/vhs_coffeeman/core/: __init__.py  config.py  hardware_manager.py  state_machine.py
vhs_coffeeman/vhs_coffeeman/hardware/: __init__.py  cup_sensor.py  grbl_interface.py  pump_controller.py  rfid_reader.py  vcr_controller.py
vhs_coffeeman/vhs_coffeeman/maintenance/: __init__.py
vhs_coffeeman/vhs_coffeeman/media/: __init__.py  video_player.py
vhs_coffeeman/vhs_coffeeman/recipes/: __init__.py  ingredients.json  recipe_loader.py  recipes.json  tapes.json
vhs_coffeeman/vhs_coffeeman/utils/: __init__.py  logger.py
